# mandelbrot-rs

./: Cargo.toml  index.html
assets/: mandelbrot.wgsl
src/: main.rs
